; ModuleID = '/home/carl/AnghaBench/skynet/3rd/lpeg/extr_lptree.c_lp_setmax.c'
source_filename = "/home/carl/AnghaBench/skynet/3rd/lpeg/extr_lptree.c_lp_setmax.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAXLIM = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [13 x i8] c"out of range\00", align 1
@LUA_REGISTRYINDEX = common dso_local global i32 0, align 4
@MAXSTACKIDX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @lp_setmax to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lp_setmax(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i64 @luaL_checkinteger(i32* %4, i32 1)
  store i64 %5, i64* %3, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = load i64, i64* %3, align 8
  %8 = icmp slt i64 0, %7
  br i1 %8, label %9, label %13

9:                                                ; preds = %1
  %10 = load i64, i64* %3, align 8
  %11 = load i64, i64* @MAXLIM, align 8
  %12 = icmp sle i64 %10, %11
  br label %13

13:                                               ; preds = %9, %1
  %14 = phi i1 [ false, %1 ], [ %12, %9 ]
  %15 = zext i1 %14 to i32
  %16 = call i32 @luaL_argcheck(i32* %6, i32 %15, i32 1, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  %17 = load i32*, i32** %2, align 8
  %18 = call i32 @lua_settop(i32* %17, i32 1)
  %19 = load i32*, i32** %2, align 8
  %20 = load i32, i32* @LUA_REGISTRYINDEX, align 4
  %21 = load i32, i32* @MAXSTACKIDX, align 4
  %22 = call i32 @lua_setfield(i32* %19, i32 %20, i32 %21)
  ret i32 0
}

declare dso_local i64 @luaL_checkinteger(i32*, i32) #1

declare dso_local i32 @luaL_argcheck(i32*, i32, i32, i8*) #1

declare dso_local i32 @lua_settop(i32*, i32) #1

declare dso_local i32 @lua_setfield(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
